# underpass-choreographer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  buf.yaml  justfile  sonar-project.properties
.github/: pull_request_template.md
.github/workflows/: dependency-review.yml  e2e.yml  integration.yml  publish-distribution.yml  quality-gate.yml
charts/choreographer/: .helmignore  Chart.yaml  values.dev.yaml  values.yaml
charts/choreographer/templates/: _helpers.tpl  deployment.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  service.yaml  serviceaccount.yaml
crates/choreo/: Cargo.toml
crates/choreo-adapters/: Cargo.toml
crates/choreo-adapters/migrations/postgres/: 0001_deliberations.sql  0002_councils.sql  0003_agents.sql  0004_statistics.sql
crates/choreo-adapters/src/: clock.rs  config.rs  lib.rs  scoring.rs  validators.rs
crates/choreo-adapters/src/agents/: anthropic.rs  mod.rs  openai.rs  openai_compat.rs  prompts.rs  vllm.rs
crates/choreo-adapters/src/grpc/: mod.rs  service.rs  status.rs  stream.rs  tracecontext.rs
crates/choreo-adapters/src/grpc/mappers/: agent.rs  attributes.rs  council.rs  deliberation.rs  event.rs  mod.rs  phase.rs  proposal.rs  task.rs  timestamp.rs  validation.rs
crates/choreo-adapters/src/memory/: agent_registry.rs  council_registry.rs  deliberation_repository.rs  mod.rs  statistics.rs
crates/choreo-adapters/src/nats/: config.rs  messaging.rs  mod.rs  subscriber.rs
crates/choreo-adapters/src/noop/: agent.rs  agent_factory.rs  executor.rs  messaging.rs  mod.rs
crates/choreo-adapters/src/postgres/: agent_registry.rs  council_registry.rs  deliberation_repository.rs  error.rs  mod.rs  pool.rs  statistics.rs
crates/choreo-adapters/tests/: grpc_tracecontext.rs
crates/choreo-app/: Cargo.toml
crates/choreo-app/benches/: deliberate.rs
crates/choreo-app/src/: lib.rs
crates/choreo-app/src/services/: auto_dispatch.rs  mod.rs
crates/choreo-app/src/usecases/: create_council.rs  delete_council.rs  deliberate.rs  get_deliberation.rs  list_councils.rs  mod.rs  orchestrate.rs  register_agent.rs  unregister_agent.rs
crates/choreo-app/tests/: span_instrumentation.rs
crates/choreo-core/: Cargo.toml
crates/choreo-core/benches/: trace_context.rs
crates/choreo-core/src/: error.rs  lib.rs
crates/choreo-core/src/entities/: council.rs  deliberation.rs  mod.rs  proposal.rs  statistics.rs  task.rs  validation.rs
crates/choreo-core/src/events/: deliberation_completed.rs  envelope.rs  mod.rs  phase_changed.rs  task_completed.rs  task_dispatched.rs  task_failed.rs  trigger.rs
crates/choreo-core/src/ports/: agent.rs  agent_factory.rs  agent_registry.rs  agent_resolver.rs  clock.rs  configuration.rs  council_registry.rs  deliberation_observer.rs  deliberation_repository.rs  executor.rs  messaging.rs  mod.rs  scoring.rs  statistics.rs  validator.rs
crates/choreo-core/src/value_objects/: agent_kind.rs  attributes.rs  duration.rs  ids.rs  mod.rs  num_agents.rs  rounds.rs  rubric.rs  score.rs  specialty.rs  task_description.rs  trace_context.rs
crates/choreo-e2e-runner/: Cargo.toml
crates/choreo-e2e-runner/src/: main.rs
crates/choreo-proto/: Cargo.toml  build.rs
crates/choreo-proto/proto/underpass/choreo/v1/: choreo.proto
crates/choreo-proto/src/: lib.rs
crates/choreo-tests-integration/: Cargo.toml
crates/choreo-tests-integration/src/: lib.rs  postgres_fixture.rs
crates/choreo-tests-integration/tests/: nats_messaging_roundtrip.rs  nats_trigger_subscriber.rs  postgres_agent_registry.rs  postgres_council_registry.rs  postgres_deliberation_repository.rs  postgres_statistics.rs
crates/choreo/src/: compose.rs  health.rs  lib.rs  main.rs  runtime.rs  seeding.rs  telemetry.rs
docs/: PRINCIPLES.md  dev-loop.md  release.md
docs/experiments/: README.md
docs/experiments/001-baseline-deliberation-latency/: README.md  run.sh
docs/experiments/001-baseline-deliberation-latency/results/: deliberate.txt  trace_context.txt
docs/experiments/002-deliberation-scale-sweep/: README.md  run.sh
docs/experiments/002-deliberation-scale-sweep/results/: deliberate-grid.txt
scripts/: release.sh
scripts/ci/: bench-compile.sh  build-provider-image.sh  container-image.sh  contract-gate.sh  e2e-compose.sh  e2e-kubernetes.sh  e2e-provider-vllm.sh  helm-lint.sh  install-asyncapi.sh  install-buf.sh  install-helm.sh  install-protoc.sh  integration-nats.sh  integration-postgres.sh  quality-gate.sh  rust-coverage.sh
specs/asyncapi/: choreographer.asyncapi.yaml
tests/e2e/: docker-compose.e2e.yaml  provider-runner.Dockerfile  runner.Dockerfile
tests/e2e/kubernetes/: nats.yaml  provider-vllm-job.yaml  runner-job.yaml
