[workspace]
resolver = "2"
members = [
    "crates/choreo-core",
    "crates/choreo-app",
    "crates/choreo-adapters",
    "crates/choreo-proto",
    "crates/choreo",
    "crates/choreo-tests-integration",
    "crates/choreo-e2e-runner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "Apache-2.0"
authors = ["Tirso Garcia Ibañez"]
repository = "https://github.com/underpass-ai/underpass-choreographer"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
float_cmp = "allow"
missing_fields_in_debug = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
# async
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# errors
thiserror = "1.0"
anyhow = "1.0"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# time / ids
time = { version = "0.3", features = ["serde", "serde-human-readable", "macros", "formatting", "parsing"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = [
    "grpc-tonic",
    "trace",
] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.28"

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# NATS
async-nats = "0.38"

# SQL / persistence
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "time",
    "uuid",
    "json",
] }

# config
figment = { version = "0.10", features = ["env", "toml"] }

# testing
mockall = "0.13"
tokio-test = "0.4"

# benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

# internal
choreo-core = { path = "crates/choreo-core" }
choreo-app = { path = "crates/choreo-app" }
choreo-adapters = { path = "crates/choreo-adapters" }
choreo-proto = { path = "crates/choreo-proto" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
