[package]
name = "choreo-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Application layer (use cases) for the Underpass Choreographer."

[lints]
workspace = true

[dependencies]
choreo-core = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
