[package]
name = "choreo-e2e-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "End-to-end runner that drives the Choreographer over its public gRPC surface. Not shipped."
publish = false

[lints]
workspace = true

[[bin]]
name = "choreo-e2e-runner"
path = "src/main.rs"

# Provider-E2E runner: drives the vLLM agent adapter directly
# against a real vLLM endpoint (mTLS or bearer). Kept as a second
# binary so the compose/k8s runner that drives the choreographer
# stays trivial and network-free by design.
[[bin]]
name = "choreo-e2e-provider"
path = "src/bin/provider.rs"

[dependencies]
choreo-proto = { workspace = true }
choreo-core = { workspace = true }
choreo-adapters = { workspace = true, features = ["agent-vllm"] }
tokio = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
