[package]
name = "choreo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Underpass Choreographer binary: wires adapters and runs the gRPC + event-driven service."

[lints]
workspace = true

[lib]
name = "choreo"
path = "src/lib.rs"

[[bin]]
name = "choreo"
path = "src/main.rs"

[dependencies]
choreo-core = { workspace = true }
choreo-app = { workspace = true }
choreo-adapters = { workspace = true, features = ["grpc", "nats", "postgres"] }
choreo-proto = { workspace = true }

async-nats = { workspace = true }
async-trait = { workspace = true }
axum = "0.7"
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
