[package]
name = "choreo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Underpass Choreographer binary: wires adapters and runs the gRPC + event-driven service."

[lints]
workspace = true

[lib]
name = "choreo"
path = "src/lib.rs"

[[bin]]
name = "choreo"
path = "src/main.rs"

[features]
# OpenTelemetry OTLP exporter. Turn on with `-F otel` at build time.
# At runtime the exporter only activates when `CHOREO_OTLP_ENDPOINT`
# is set; otherwise the binary behaves exactly as without the
# feature — JSON-format spans to stdout only. This keeps the
# default container image free of the OTel dependency surface for
# deployments that do not need it.
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:tracing-opentelemetry",
    "choreo-adapters/otel",
]

[dependencies]
choreo-core = { workspace = true }
choreo-app = { workspace = true }
choreo-adapters = { workspace = true, features = ["grpc", "nats", "postgres"] }
choreo-proto = { workspace = true }

opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

async-nats = { workspace = true }
async-trait = { workspace = true }
axum = "0.7"
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
